--- a/cnn_multi_channels.html
+++ b/cnn_multi_channels.html
@@ -62,7 +62,7 @@ where
 	<li>Super script indicate the channel number.  For the kernel, first number denotes the input channel number followed by the output channel</li>
 </ul>
 
-Matrix form of each variable is given as the following.  
+The matrix form of each variable is given as the following: 
 \begin{equation}
 Z^{(1)} = 
 \begin{bmatrix}
