--- a/cnn_backprop_strides2.html
+++ b/cnn_backprop_strides2.html
@@ -39,7 +39,7 @@ where
 <li>\(*_{stride2}\) denotes the convolution operation with stride is set to 2.</li>
 </ul>
 
-Matrix form of each variable is given as the following:
+The matrix form of each variable is given as the following:
 \begin{equation}
 Z = 
 \begin{bmatrix}
