--- a/cnn_multi_channels.html
+++ b/cnn_multi_channels.html
@@ -352,7 +352,7 @@ The objectives of backprop for this layer are to find the values for the followi
 <h2>2. Solution</h2>
 To find \(\frac{\partial L}{\partial a_{prev}^{(1)}}\) and \(\frac{\partial L}{\partial a_{prev}^{(2)}}\), 
 we just have to calculate each of 4 elements of the matrix \( (28) \) and \( (29) \).
-Note that for all the 4 sets of equations below, each of second equation is derived by substituting w for the partial
+Note that for all the 4 sets of equations below, the second equation in each set is derived by substituting w for the partial
 derivative of z with respect to a.  I discussed this in my previous post so please refer to that.
 
 <div class="spacer"></div>
