--- a/cnn_multi_channels.html
+++ b/cnn_multi_channels.html
@@ -775,7 +775,7 @@ Putting this into a matrix form yields
 \end{bmatrix}
 \end{equation}
 
-As in my previous article, the matrix can be simpflied by expressing using other matrices with a little modification:
+As in my previous article, the matrix can be simpflied by using other matrices with a little modification:
 
 \begin{equation}
 W^{(2, 1)}_{flipped} = flip_{verhorz}(W^{(2, 1)}) =
