--- a/cnn_multi_channels.html
+++ b/cnn_multi_channels.html
@@ -825,7 +825,7 @@ zero\_pad(\frac{\partial L}{\partial Z^{(1)}}) * W^{(2, 1)}_{flipped} +
 zero\_pad(\frac{\partial L}{\partial Z^{(2)}}) * W^{(2, 2)}_{flipped} 
 \end{equation}
 
-Note that this is a just convolution operation done in a reverse way, and we are done with \( \frac{\partial L}{\partial a_{prev}} \)
+Note that this is just a convolution operation done in a reverse way, and we are done with \( \frac{\partial L}{\partial a_{prev}} \)
 
 
 <div class="spacer"></div>
