--- a/cnn_multi_channels.html
+++ b/cnn_multi_channels.html
@@ -1546,7 +1546,7 @@ zero\_pad(a_{prev}^{(1)}) * \frac{\partial L}{\partial Z^{(2)}}
 
 <hr>
 <h4>2.2.3. Calculate \(\frac{\partial L}{\partial W^{(2, 1)}}\)</h4>
-Next, let's finding the derivative of loss with respect to weights for the second input channel and first output channel.
+Next, let's find the derivative of loss with respect to weights for the second input channel and first output channel.
 <h5>\(\frac{\partial L}{\partial w_{11}^{(2, 1)}}\)</h5>
 
 \begin{equation}
