--- a/cnn_multi_channels.html
+++ b/cnn_multi_channels.html
@@ -1895,7 +1895,7 @@ Putting this into a matrix form yields
 \end{bmatrix}
 \end{equation}
 
-With these, you can rewrite the matrix in \( 147 \) as
+Using the same technique as before, you can rewrite the matrix in \( 147 \) as
 
 \begin{equation}
 \frac{\partial L}{\partial W^{(2,1)}} = 
