--- a/cnn_multi_channels.html
+++ b/cnn_multi_channels.html
@@ -1905,7 +1905,7 @@ zero\_pad(a_{prev}^{(2)}) * \frac{\partial L}{\partial Z^{(1)}}
 You can derive \( \frac{\partial L}{\partial W^{(2,2)}} \) the same way.
 
 <h1>3. Summary</h1>
-Here is the summary
+Here is the summary of the back propagation calculations:
 
 \begin{equation}
 \frac{\partial L}{\partial W^{(1,1)}} = 
